--- a/slick/slick.css
+++ b/slick/slick.css
@@ -1,6 +1,7 @@
 /* Slider */
 .slick-slider
 {
+    height: 220px;
     position: relative;
 
     display: block;
@@ -79,6 +80,7 @@
     display: none;
     float: left;
 
+    width: 100%;
     height: 100%;
     min-height: 1px;
 }
@@ -116,4 +118,10 @@
 }
 .slick-arrow.slick-hidden {
     display: none;
+}
+
+@include breakpoint('medium'){
+    .slick-slider {
+        height: 500px;
+    }
 }
